main slide section 개발

--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="header-wrap">
             <h1 class="logo">
-                <a href="#">
+                <a href="./index.html">
                     <img src="../../../resources/images/main/logo.png" alt="marulatte-logo">
                 </a>
             </h1>
@@ -24,15 +24,30 @@
             </form>
             
             <!-- 로그인한 사용자 인사 코멘트-->
-            <p>Mr.Maru Hello!</p>
+            <p>Maru Hello</p>
 
             <!-- 로그인 유저 Logout, 비로그인 유저 Login 출력 -->
-            <span>Logout</span>
+            <button type="button" id="login-btn">LogOut</button>
         </div>
     </header>
     <!-- header end -->
     <main id="main">
-
+        <div class="main-wrap">
+            <!-- main slide start -->
+            <section id="slide">
+                <img class="slide-main-img" src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                <div class="slide-r">
+                    <h2>Up Next</h2>
+                    <div class="slide__box">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                    </div>
+                    <a href="#">All Game</a>
+                </div>
+            </section>
+            <!-- main slide end -->
+        </div>
     </main>
     <footer id="footer">
         
