--- a/MaruLatte/src/main/webapp/resources/stylesheet/style.css
+++ b/MaruLatte/src/main/webapp/resources/stylesheet/style.css
@@ -49,6 +49,7 @@ form{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 5000;
 }
 #header .header-wrap{
     width: 100%;
@@ -87,12 +88,65 @@ form{
 #header p{
     grid-column: 10/12;
     letter-spacing: 0.1em;
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
 }
-#header span{
+#header #login-btn{
     grid-column: 12/13;
     letter-spacing: 0.1em;
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
+}
+
+/* main */
+#main{
+    width: 100vw;
+    height: auto;
+    position: relative;
+    top: 100px;
+    margin: 25px 0;
+}
+.main-wrap{
+    width: 100%;
+    max-width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 20px;
+    align-items: center;
+}
+#slide{
+    grid-column: 1/13;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-gap: 20px;
+}
+#slide .slide-main-img{
+    grid-column: 1/10;
+}
+#slide .slide-r{
+    grid-column: 10/13;
+}
+#slide img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+}
+#slide .slide-r h2{
+    color: #F5C518;
+    font-size: 16px;
+    letter-spacing: 0.1em;
+}
+#slide .slide__box{
+    background: linear-gradient(180deg, #111111 25.12%, #000000 100%);
+    padding: 15px 40px;
+    margin: 20px 0;
+}
+#slide .slide__box img{
+    margin-bottom: 10px;
+}
+#slide .slide__box img:last-child{
+    margin: 0;
 }
