rec slide section 개발

--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -35,18 +35,48 @@
         <div class="main-wrap">
             <!-- main slide start -->
             <section id="slide">
-                <img class="slide-main-img" src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                <a href="#"class="slide-main-img">
+                    <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                </a>
                 <div class="slide-r">
                     <h2>Up Next</h2>
                     <div class="slide__box">
-                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
-                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
-                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
                     </div>
                     <a href="#">All Game</a>
                 </div>
             </section>
             <!-- main slide end -->
+            <!-- recommendation slide start -->
+            <section id="rec-slide">
+                <h2>Recommendation</h2>
+                <button class="rec-slide--prev-btn"></button>
+                <div class="rec-slide__box">
+                    <!-- rec slide card -->
+                    <div class="rec-slide__card">
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
+                        </a>
+                        <caption>Ori and the blind forest</caption>
+                    </div>
+                    <div class="rec-slide__card">
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
+                        </a>
+                        <caption>Ori and the blind forest</caption>
+                    </div>
+                    <div class="rec-slide__card">
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
+                        </a>
+                        <caption>Ori and the blind forest</caption>
+                    </div>
+                </div>
+                <button class="rec-slide--next-btn"></button>
+            </section>
+            <!-- recommendation slide end -->
         </div>
     </main>
     <footer id="footer">
