rec section link button 추가

--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -75,6 +75,7 @@
                     </div>
                 </div>
                 <button class="rec-slide--next-btn"></button>
+                <a href="#" class="link--all">Go to all the recommendation games</a>
             </section>
             <!-- recommendation slide end -->
         </div>
