--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -3,6 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="game recommendation site">
+    <meta name="keywords" content="game, content, recommendation">
+    <meta name="robots" content="All">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MaruLatte">
+    <meta property="og:description" content="game recommendation site">
+    <meta property="og:image" content="../../../resources/images/main/main.png">
+    <meta name="twitter:card" content="card">
+    <!-- <meta property="og:url" content=""> -->
+    <meta property="og:site_name" content="MaruLatte">
+    <link rel="apple-touch-icon" sizes="57x57" href="../../../resources/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../../resources/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../../resources/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../../resources/images/favicon/">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../../resources/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../../resources/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../../resources/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../../resources/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../../resources/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../../../resources/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../../resources/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../../resources/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../../resources/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../../../resources/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#F5C518">
+    <meta name="msapplication-TileImage" content="../../../resources/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#F5C518">
+
     <title>MaruLatte</title>
     <link rel="stylesheet" href="../../../resources/stylesheet/style.css">
 </head>
