--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -108,8 +108,42 @@
             <!-- recommendation slide end -->
         </div>
     </main>
+    <!-- footer start -->
     <footer id="footer">
-        
+        <div class="footer-wrap">
+            <ul class="fnb">
+                <li>
+                    <a href="#">
+                        <i>
+                            <img src="../../../resources/images/icon/instagram-white-ico.png" alt="instagram-icon">
+                        </i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>
+                            <img src="../../../resources/images/icon/facebook-white-ico.png" alt="facebook-icon">
+                        </i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>
+                            <img src="../../../resources/images/icon/mail-white-ico.png" alt="mail-icon">
+                        </i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>
+                            <img src="../../../resources/images/icon/github-white-ico.png" alt="github-icon">
+                        </i>
+                    </a>
+                </li>
+            </ul>
+            <p>&copy; 2020 by maru & dolphinman reserved</p>
+        </div>
     </footer>
+    <!-- footer end -->
 </body>
 </html>
