--- a/MaruLatte/src/main/webapp/resources/stylesheet/style.css
+++ b/MaruLatte/src/main/webapp/resources/stylesheet/style.css
@@ -46,10 +46,8 @@ form{
     color: #000;
     width: 450px;
     height: 50px;
-    position: absolute;
-    left: 50%;
-    bottom: -25%;
-    transform: translateX(-50%);
+    display: block;
+    margin: 25px auto 10px auto;
     line-height: 19px;
     font-weight: bold;
     border-radius: 5px;
@@ -119,8 +117,7 @@ form{
 #main{
     width: 100vw;
     height: auto;
-    position: relative;
-    top: 100px;
+    padding-top: 100px;
     margin: 25px 0;
 }
 .main-wrap{
@@ -236,4 +233,40 @@ form{
     top: 50%;
     right: -35px;
     transform: translateY(-50%);
+}
+
+/* footer */
+#footer{
+    width: 100vw;
+    position: relative;
+    bottom: 0;
+}
+#footer .footer-wrap{
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+#footer .fnb{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#footer .fnb li{
+    margin-right: 5%;
+}
+#footer .fnb li:last-child{
+    margin: 0;
+}
+#footer .fnb a{
+    padding: 10px;
+}
+#footer .fnb img{
+    width: 32px;
+}
+#footer p{
+    color: #fff;
+    text-align: center;
+    margin-top: 25px;
+    font-size: 14px;
 }
