rating slide section 개발

--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -79,33 +79,100 @@
             <!-- main slide end -->
             <!-- recommendation slide start -->
             <section id="rec-slide">
-                <h2>Recommendation</h2>
-                <button class="rec-slide--prev-btn"></button>
+                <h2 class="section__title">Recommendation</h2>
+                <button class="section--prev-btn" type="button" id="rec-prev--btn"></button>
                 <div class="rec-slide__box">
                     <!-- rec slide card -->
                     <div class="rec-slide__card">
                         <a href="#">
                             <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
                         </a>
-                        <caption>Ori and the blind forest</caption>
+                        <caption>
+                            <p>Ori and the blind forest</p>
+                        </caption>
                     </div>
                     <div class="rec-slide__card">
                         <a href="#">
                             <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
                         </a>
-                        <caption>Ori and the blind forest</caption>
+                        <caption>
+                            <p>Ori and the blind forest</p>
+                        </caption>
                     </div>
                     <div class="rec-slide__card">
                         <a href="#">
                             <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
                         </a>
-                        <caption>Ori and the blind forest</caption>
+                        <caption>
+                            <p>Ori and the blind forest</p>
+                        </caption>
                     </div>
                 </div>
-                <button class="rec-slide--next-btn"></button>
+                <button class="section--next-btn" type="button" id="rec-next--btn"></button>
                 <a href="#" class="link--all">Go to all the recommendation games</a>
             </section>
             <!-- recommendation slide end -->
+            <!-- rating slide start -->
+            <section id="rating-slide">
+                <h2 class="section__title">Rating</h2>
+                <button class="section--prev-btn" type="button" id="rating-prev--btn"></button>
+                <div class="rating-slide__box">
+                    <div class="rating-slide__card">
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <div class="rating-slide__card__content">
+                            <i class="rating-star">
+                                <img src="../../../resources/images/icon/Star-icon.png" alt="start-icon">
+                                <span>9.7</span>
+                            </i>
+                            <p>Ori and the blind forest</p>
+                            <a href="#" class="rating-arrow">
+                                <i>
+                                    <img src="../../../resources/images/icon/link-white.png" alt="link-icon">
+                                </i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="rating-slide__card">
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <div class="rating-slide__card__content">
+                            <i class="rating-star">
+                                <img src="../../../resources/images/icon/Star-icon.png" alt="start-icon">
+                                <span>9.7</span>
+                            </i>
+                            <p>Ori and the blind forest</p>
+                            <a href="#" class="rating-arrow">
+                                <i>
+                                    <img src="../../../resources/images/icon/link-white.png" alt="link-icon">
+                                </i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="rating-slide__card">
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <div class="rating-slide__card__content">
+                            <i class="rating-star">
+                                <img src="../../../resources/images/icon/Star-icon.png" alt="start-icon">
+                                <span>9.7</span>
+                            </i>
+                            <p>Ori and the blind forest</p>
+                            <a href="#" class="rating-arrow">
+                                <i>
+                                    <img src="../../../resources/images/icon/link-white.png" alt="link-icon">
+                                </i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <button class="section--next-btn" type="button" id="rating-next--btn"></button>
+                <a href="#" class="link--all">Go to all the rating games</a>
+            </section>
+            <!-- rating slide end -->
         </div>
     </main>
     <!-- footer start -->
