--- a/MaruLatte/src/main/webapp/resources/stylesheet/style.css
+++ b/MaruLatte/src/main/webapp/resources/stylesheet/style.css
@@ -9,6 +9,9 @@
     box-sizing: border-box;
     letter-spacing: 0.1em;
 }
+i{
+    font-style: normal;
+}
 a{
     text-decoration: none;
     color: #fff;
@@ -40,6 +43,13 @@ form{
     left: 1px;
     overflow: hidden;
     visibility: hidden;
+}
+.section__title{
+    color: #F5C518;
+    font-size: 22px;
+    grid-column: 1/13;
+    margin-bottom: 20px;
+    letter-spacing: 1.5px;
 }
 .link--all{
     background-color: #F5C518;
@@ -172,13 +182,6 @@ form{
     padding: 20px 10px;
     position: relative;
 }
-#rec-slide h2{
-    color: #F5C518;
-    font-size: 22px;
-    grid-column: 1/13;
-    margin-bottom: 20px;
-    letter-spacing: 1.5px;
-}
 #rec-slide .rec-slide__box{
     grid-column: 1/13;
     display: grid;
@@ -202,7 +205,7 @@ form{
 #rec-slide .rec-slide__card img{
     width: 100%;
 }
-.rec-slide--prev-btn, .rec-slide--next-btn{
+.section--prev-btn, .section--next-btn{
     width: 70px;
     height: 100px;
     background-color: rgba(255,255,255,0.2);
@@ -210,7 +213,7 @@ form{
     border-radius: 10px;
     position: absolute;
 }
-.rec-slide--prev-btn::before, .rec-slide--next-btn::before{
+.section--prev-btn::before, .section--next-btn::before{
     content: "";
     width: 50%;
     height: 50%;
@@ -224,17 +227,71 @@ form{
     background-repeat: no-repeat;
     display: block;
 }
-.rec-slide--prev-btn{
+.section--prev-btn{
     top: 50%;
     left: -35px;
     transform: rotate(180deg) translateY(50%);
 }
-.rec-slide--next-btn{
+.section--next-btn{
     top: 50%;
     right: -35px;
     transform: translateY(-50%);
 }
 
+/* rating slide */
+#rating-slide{
+    grid-column: 1/13;
+    background-color: #121212;
+    padding: 20px 10px;
+    position: relative;
+}
+#rating-slide .rating-slide__box{
+    grid-column: 1/13;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-gap: 20px;
+}
+#rating-slide .rating-slide__card{
+    font-size: 14px;
+    color: #bbb;
+}
+#rating-slide .rating-slide__card:nth-child(1){
+    grid-column: 1/5;
+}
+#rating-slide .rating-slide__card:nth-child(2){
+    grid-column: 5/9;
+}
+#rating-slide .rating-slide__card:nth-child(3){
+    grid-column: 9/13;
+}
+#rating-slide .rating-slide__card img{
+    width: 100%;
+}
+#rating-slide .rating-slide__card i img{
+    width: 32px;
+}
+#rating-slide .rating-slide__card__content{
+    background-color: #1A1A1A;
+    padding: 20px;
+}
+#rating-slide .rating-slide__card__content .rating-star{
+    display: flex;
+    align-items: center;
+}
+#rating-slide .rating-slide__card__content .rating-star img{
+    width: 22px;
+    margin-right: 5px;
+}
+#rating-slide .rating-slide__card__content p{
+    margin: 20px 0;
+}
+#rating-slide .rating-slide__card .rating-arrow{
+    display: flex;
+    justify-content: center;
+}
+#rating-slide .rating-slide__card .rating-arrow img{
+    width: 22px;
+}
 /* footer */
 #footer{
     width: 100vw;
