video slide section 개발

--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -117,6 +117,7 @@
                 <h2 class="section__title">Rating</h2>
                 <button class="section--prev-btn" type="button" id="rating-prev--btn"></button>
                 <div class="rating-slide__box">
+                    <!-- rating slide card -->
                     <div class="rating-slide__card">
                         <a href="#">
                             <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
@@ -173,6 +174,59 @@
                 <a href="#" class="link--all">Go to all the rating games</a>
             </section>
             <!-- rating slide end -->
+            <!-- video slide start -->
+            <section id="video">
+                <h2 class="section__title">Cinematic Video</h2>
+                <button class="section--prev-btn" type="button" id="video-prev--btn"></button>
+                <div class="video-slide__box">
+                    <!-- video slide card -->
+                    <div class="video-slide__card">
+                        <a href="#">
+                            <i>
+                                <img src="../../../resources/images/icon/video-ico.png" alt="video-icon">
+                                <span>3:36</span>
+                            </i>
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <caption>
+                            <p>
+                                Ori and the blind forest
+                            </p>
+                        </caption>
+                    </div>
+                    <div class="video-slide__card">
+                        <a href="#">
+                            <i>
+                                <img src="../../../resources/images/icon/video-ico.png" alt="video-icon">
+                                <span>3:36</span>
+                            </i>
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <caption>
+                            <p>
+                                Ori and the blind forest
+                            </p>
+                        </caption>
+                    </div>
+                    <div class="video-slide__card">
+                        <a href="#">
+                            <i>
+                                <img src="../../../resources/images/icon/video-ico.png" alt="video-icon">
+                                <span>3:36</span>
+                            </i>
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <caption>
+                            <p>
+                                Ori and the blind forest
+                            </p>
+                        </caption>
+                    </div>
+                </div>
+                <button class="section--next-btn" type="button" id="video-next--btn"></button>
+                <a href="#" class="link--all">Go to all the cinematic videos</a>
+            </section>
+            <!-- video slide end -->
         </div>
     </main>
     <!-- footer start -->
