--- a/MaruLatte/src/main/webapp/resources/stylesheet/style.css
+++ b/MaruLatte/src/main/webapp/resources/stylesheet/style.css
@@ -292,6 +292,52 @@ form{
 #rating-slide .rating-slide__card .rating-arrow img{
     width: 22px;
 }
+
+/* video slide */
+#video{
+    grid-column: 1/13;
+    background-color: #121212;
+    padding: 20px 10px;
+    position: relative;
+}
+#video .video-slide__box{
+    grid-column: 1/13;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-gap: 20px;
+}
+#video .video-slide__card{
+    position: relative;
+}
+#video .video-slide__card p{
+    font-size: 14px;
+    color: #bbb;
+    text-align: center;
+}
+#video .video-slide__card:nth-child(1){
+    grid-column: 1/5;
+}
+#video .video-slide__card:nth-child(2){
+    grid-column: 5/9;
+}
+#video .video-slide__card:nth-child(3){
+    grid-column: 9/13;
+}
+#video .video-slide__card img{
+    width: 100%;
+}
+#video .video-slide__card i{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#video .video-slide__card i img{
+    width: 26px;
+    margin-right: 5px;
+}
 /* footer */
 #footer{
     width: 100vw;
