--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -63,15 +63,53 @@
         <div class="main-wrap">
             <!-- main slide start -->
             <section id="slide">
-                <a href="#"class="slide-main-img">
-                    <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
-                </a>
+                <div class="slide-main-img">
+                    <button id="prevBtn">
+                        <i>
+                            <img src="../../../resources/images/icon/arrow-white.png" alt="">
+                        </i>
+                    </button>
+                    <div class="carousel-slide">
+                        <a href="#">
+                            <img id="lastClone" src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/reigns.jpg" alt="reigns-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/word-of-warcraft.png" alt="word-of-warcraft-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/abzu.jpg" alt="abzu-img">
+                        </a>
+                        <a href="#">
+                            <img id="firstClone" src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
+                        </a>
+                    </div>
+                    <button id="nextBtn">
+                        <i>
+                            <img src="../../../resources/images/icon/arrow-white.png" alt="">
+                        </i>
+                    </button>
+                </div>
                 <div class="slide-r">
                     <h2>Up Next</h2>
                     <div class="slide__box">
-                        <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
-                        <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
-                        <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                        <div class="carousel-slide2">
+                            <img id="lastClone2" src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                            <img src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
+                            <img src="../../../resources/images/common/reigns.jpg" alt="reigns-img">
+                            <img src="../../../resources/images/common/word-of-warcraft.png" alt="word-of-warcraft-img">
+                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
+                            <img src="../../../resources/images/common/abzu.jpg" alt="abzu-img">
+                            <img id="firstClone2" src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
+                        </div>
                     </div>
                     <a href="#">All Game</a>
                 </div>
@@ -266,5 +304,6 @@
         </div>
     </footer>
     <!-- footer end -->
+    <script src="../../../resources/js/carousel.js"></script>
 </body>
 </html>
