--- a/MaruLatte/src/main/webapp/resources/stylesheet/style.css
+++ b/MaruLatte/src/main/webapp/resources/stylesheet/style.css
@@ -148,6 +148,42 @@ form{
 }
 #slide .slide-main-img{
     grid-column: 1/10;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
+#slide .carousel-slide{
+    display: flex;
+}
+#slide .slide-main-img:hover #prevBtn{
+    left: 0;
+}
+#slide .slide-main-img:hover #nextBtn{
+    right: 0;
+}
+#slide button{
+    position: absolute;
+    width: 50px;
+    height: 100px;
+    background-color: rgba(255,255,255,0.2);
+    top: 50%;
+    transition: 0.2s;
+    z-index: 3000;
+}
+#slide button i img{
+    width: 35px;
+    height: 35px;
+}
+#slide #prevBtn{
+    transform: rotate(180deg) translateY(50%);
+    left: -50px;
+}
+#slide #nextBtn{
+    right: -50px;
+    transform: translateY(-50%);
+}
+#slide .slide-main-img a{
+    min-width: 745px;
 }
 #slide .slide-r{
     grid-column: 10/13;
@@ -156,7 +192,6 @@ form{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    cursor: pointer;
 }
 #slide .slide-r h2{
     color: #F5C518;
@@ -165,14 +200,15 @@ form{
 }
 #slide .slide__box{
     background: linear-gradient(180deg, #111111 50%, #000000 100%);
+    max-height: 350px;
     padding: 15px 40px;
     margin: 20px 0;
+    overflow: hidden;
 }
 #slide .slide__box img{
-    margin-bottom: 10px;
-}
-#slide .slide__box img:last-child{
-    margin: 0;
+    width: 100%;
+    height: 95px;
+    margin-bottom: 12px;
 }
 
 /* recommendation slide */
