--- a/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
+++ b/MaruLatte/src/main/webapp/WEB-INF/views/html/index.html
@@ -89,6 +89,18 @@
                             <img src="../../../resources/images/common/abzu.jpg" alt="abzu-img">
                         </a>
                         <a href="#">
+                            <img src="../../../resources/images/common/path-of-exile.jpg" alt="path-of-exile-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/skyrim.jpg" alt="skyrim-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/borderlands.jpg" alt="borderlands-img">
+                        </a>
+                        <a href="#">
+                            <img src="../../../resources/images/common/portal2.jpg" alt="portal2-img">
+                        </a>
+                        <a href="#">
                             <img id="firstClone" src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
                         </a>
                     </div>
@@ -108,6 +120,10 @@
                             <img src="../../../resources/images/common/word-of-warcraft.png" alt="word-of-warcraft-img">
                             <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">
                             <img src="../../../resources/images/common/abzu.jpg" alt="abzu-img">
+                            <img src="../../../resources/images/common/path-of-exile.jpg" alt="path-of-exile-img">
+                            <img src="../../../resources/images/common/skyrim.jpg" alt="skyrim-img">
+                            <img src="../../../resources/images/common/borderlands.jpg" alt="borderlands-img">
+                            <img src="../../../resources/images/common/portal2.jpg" alt="portal2-img">
                             <img id="firstClone2" src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
                         </div>
                     </div>
@@ -131,7 +147,7 @@
                     </div>
                     <div class="rec-slide__card">
                         <a href="#">
-                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
+                            <img src="../../../resources/images/common/destiny2.jpg" alt="destiny2-img">
                         </a>
                         <caption>
                             <p>Ori and the blind forest</p>
@@ -139,7 +155,7 @@
                     </div>
                     <div class="rec-slide__card">
                         <a href="#">
-                            <img src="../../../resources/images/common/Ori-and-the-Blind-Forest 1.png" alt="ori-and-the-blind-forest-img">                            
+                            <img src="../../../resources/images/common/reigns.jpg" alt="reigns-img">
                         </a>
                         <caption>
                             <p>Ori and the blind forest</p>
